changes in Service and Repository

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,7 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "Shopbridge_Context": "Server=(localdb)\\MSSQLLocalDB;Database=Shopbridge_Context-bf53e110-7950-4cb0-a45d-226517a8f7dd;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
+  "ConnectionStrings": {
+    "APPDbContext": "Server=localhost;port=3306;Database=Shopbridgedb;User Id=root;Password=analystor@123;"
+  }
 }
